# Overwatch

./: .cargo-deny.toml  .gitignore  .pre-commit-config.yaml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  out.rs  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/actions/prune-cache/: action.yml
.github/actions/setup-cargo-cache/: action.yml
.github/actions/update-cargo-cache/: action.yml
.github/workflows/: auto-author.yml  code-check.yml  codecov.yml  main.yml  release.yml  rust-latest-version-check.yml
ci/: Dockerfile  README.md
examples/ping_pong/: .gitignore  Cargo.toml  README.md
examples/ping_pong/saved_states/: ping_state.json
examples/ping_pong/src/: main.rs  messages.rs  operators.rs  service_ping.rs  service_pong.rs  settings.rs  states.rs
examples/waku-chat/: Cargo.toml
examples/waku-chat/src/: chat.rs  main.rs
examples/waku-chat/src/network/: mod.rs  waku.rs
overwatch/: Cargo.toml  LICENSE  README.md
overwatch-derive/: Cargo.toml  LICENSE  README.md
overwatch-derive/src/: lib.rs  utils.rs
overwatch-derive/tests/: from_str.rs
overwatch-rs/: Cargo.toml  README.md
overwatch-rs/src/: lib.rs
overwatch-rs/src/overwatch/: commands.rs  handle.rs  life_cycle.rs  mod.rs
overwatch-rs/src/services/: handle.rs  life_cycle.rs  mod.rs  relay.rs  settings.rs  state.rs  status.rs
overwatch-rs/src/utils/: const_checks.rs  mod.rs  runtime.rs
overwatch-rs/tests/: cancelable_service.rs  generics.rs  print_service.rs  sequence.rs  sequence_init.rs  settings_update.rs  state_handling.rs  try_load.rs
overwatch/src/: lib.rs
overwatch/src/overwatch/: commands.rs  errors.rs  handle.rs  life_cycle.rs  mod.rs  runner.rs  runtime.rs  services.rs
overwatch/src/services/: handle.rs  life_cycle.rs  mod.rs  relay.rs  resources.rs  runner.rs  service_handle.rs  settings.rs  state.rs  state_handle.rs  status.rs
overwatch/src/services/lifecycle/: errors.rs  handle.rs  message.rs  mod.rs  notifier.rs
overwatch/src/services/relay/: errors.rs  inbound.rs  mod.rs  outbound.rs
overwatch/src/services/runner/: handle.rs  mod.rs  service_runner.rs
overwatch/src/services/settings/: handle.rs  mod.rs  notifier.rs  updater.rs
overwatch/src/services/state/: fuse.rs  handle.rs  mod.rs  operator.rs  service_state.rs  updater.rs  watcher.rs
overwatch/src/services/status/: handle.rs  mod.rs  service_status.rs  updater.rs  watcher.rs
overwatch/src/utils/: const_checks.rs  finished_signal.rs  mod.rs  runtime.rs  traits.rs
overwatch/tests/: async.rs  cancelable_service.rs  generics.rs  lifecycle.rs  on_stop.rs  print_service.rs  relay_after_shutdown.rs  sequence.rs  services.rs  settings_update.rs  state_handling.rs  try_load.rs
