[workspace]
resolver = "2"
members = ["overwatch", "overwatch-derive", "examples/ping_pong"]

[workspace.package]
license = "MIT or Apache-2.0"
repository = "https://github.com/logos-co/Overwatch"
homepage = "https://github.com/logos-co/Overwatch"

[workspace.dependencies]
overwatch = { path = "./overwatch" }
overwatch-derive = { path = "./overwatch-derive" }

[profile.release-opt]
inherits = "release"
lto = true
