[package]
authors     = ["Daniel Sanchez Quiros <danielsq@status.im>"]
categories  = { workspace = true }
description = "Overwatch derive macros"
edition     = { workspace = true }
exclude     = ["./tests", ".github"]
homepage    = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "overwatch-derive"
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
instrumentation = ["dep:tracing"]

[dependencies]
convert_case      = "0.8"
proc-macro-error2 = "2.0"
proc-macro2       = "1.0"
quote             = "1.0"
syn               = { version = "2.0", features = ["full"] }
tracing           = { version = "0.1", optional = true }

[dev-dependencies]
async-trait = "0.1"
overwatch   = { workspace = true, features = ["derive"] }
tracing     = "0.1"

[lints]
workspace = true
