[package]
authors     = ["Daniel Sanchez Quiros <danielsq@status.im>"]
categories  = { workspace = true }
description = "Overwatch derive macros"
edition     = { workspace = true }
exclude     = ["./tests", ".github"]
homepage    = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "overwatch-derive"
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
instrumentation = ["dep:tracing"]

[dependencies]
convert_case = "0.8"
manyhow      = "0.11"
proc-macro2  = "1.0"
quote        = "1.0"
syn          = { features = ["full"], version = "2.0" }
tracing      = { optional = true, version = "0.1" }

[dev-dependencies]
async-trait = "0.1"
overwatch   = { features = ["derive"], workspace = true }
tracing     = "0.1"

[lints]
workspace = true
