[package]
name = "overwatch-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>"
]
license-file = "LICENSE"
homepage = "https://github.com/logos-co/Overwatch"
repository = "https://github.com/logos-co/Overwatch"
description = "Overwatch is a framework to easily construct applications that requires of several independent parts that needs communication between them. Everything is self-contained, and it matches somewhat the advantages of microservices."
readme = "README.md"
keywords = ["async", "services"]
categories = ["Asynchronous"]
exclude = [
    "./tests",
    ".github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overwatch-derive = { path = "../overwatch-derive" }
const-str = "0.3"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
tokio = { version = "1.17", features = ["rt-multi-thread", "sync", "time"] }
tokio-stream = {version ="0.1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.17", features = ["rt-multi-thread", "sync", "time", "io-std", "io-util", "macros"] }
