[package]
authors     = ["Daniel Sanchez Quiros <danielsq@status.im>"]
categories  = { workspace = true }
description = "A lightweight framework for building modular, interconnected applications."
edition     = { workspace = true }
exclude     = ["./tests", ".github"]
homepage    = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "overwatch"
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default         = ["derive"]
derive          = ["dep:overwatch-derive"]
instrumentation = []

[dependencies]
async-trait      = "0.1"
futures          = "0.3"
overwatch-derive = { workspace = true, optional = true }
thiserror        = "2.0"
tokio            = { version = "1.32", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream     = { version = "0.1", features = ["sync"] }
tokio-util       = "0.7"
tracing          = "0.1"

[dev-dependencies]
overwatch-derive = { workspace = true }
tokio            = { version = "1.17", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
