[package]
authors     = ["Daniel Sanchez Quiros <danielsq@status.im>"]
categories  = { workspace = true }
description = "A lightweight framework for building modular, interconnected applications."
edition     = { workspace = true }
exclude     = ["./tests", ".github"]
homepage    = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "overwatch"
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default          = ["derive"]
derive           = ["dep:overwatch-derive"]
instrumentation  = []
tokio-task-names = ["tokio/rt", "tokio/tracing"]

[dependencies]
async-trait      = "0.1"
futures          = "0.3"
overwatch-derive = { optional = true, workspace = true }
thiserror        = "2.0"
tokio            = { features = ["macros", "rt-multi-thread", "sync", "time"], version = "1.32" }
tokio-stream     = { features = ["sync"], version = "0.1" }
tokio-util       = "0.7"
tracing          = "0.1"

[dev-dependencies]
overwatch = { features = ["derive"], path = "." }
tokio     = { features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"], version = "1.17" }

[lints]
workspace = true
