[package]
categories  = { workspace = true }
description = "Example of a Overwatch runner implementation that sends messages between a Ping and a Pong service."
edition     = { workspace = true }
keywords    = ["async", "examples", "framework", "services"]
license     = { workspace = true }
name        = "ping_pong"
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
async-trait  = "0.1.83"
const_format = "0.2.34"
overwatch    = { features = ["derive"], workspace = true }
serde        = { features = ["derive"], version = "1.0.216" }
serde_json   = "1.0.134"
thiserror    = "2.0.8"
tokio        = { features = ["macros"], version = "1.42.0" }
tracing      = "0.1.41"

[lints]
workspace = true

[package.metadata.cargo-machete]
# False positives.
ignored = [
  # Required by Overwatch's `#[derive(Services)]` macro.
  "tracing",
]
